link to introductory video; some translations updated at 03,04,06,07,08,09

--- a/04-Descriptive-statistics.qmd
+++ b/04-Descriptive-statistics.qmd
@@ -573,7 +573,7 @@ More to the point, jamovi has a check box for kurtosis just below the check box 
 
 往後許多實例要根據某個分組變項，對其他變項進行分組描述統計。使用jamovi分組描述統計只是小菜一碟。例如根據臨床治療方式，對收集到的臨床試驗資料進行分組描述統計。在這一節我們用另一批資料學習。請開啟學習資料庫裡的"Clinical Trial"資料集，之後在 @sec-Comparing-several-means-one-way-ANOVA 會詳細這一批資料的來歷。開啟後的試算表介面如同 @fig-fig4-13 :
 
-先看一下名義變項`drug`的數值：有安慰劑(placebo)，還有”anxifree"和“joyzepam”，三種藥各有六個受測者。另一個名義變項`therapy`代表治療方法，其中有九位受測者接受認知行為治療(CBT)，另外九位並未接受任何心理治療。比照之前的操作，在描述統計模組選單裡，單獨將連續尺度變項`mood.gain`放到Variables框裡，就會看到報表區出現這個變項的平均值0.88。雖然我們還不知道這個變項的測量尺度是什麼意義，至少看起來能做些統計工作。
+先看一下名義變項`drug`的數值：有安慰劑(placebo)，還有”anxifree"和“joyzepam”，三種藥各有六個受測者。另一個名義變項`therapy`代表治療方法，其中有九位受測者接受認知行為治療(CBT)，另外九位並未接受任何心理治療。比照之前的操作，在描述統計模組選單裡，單獨將連續尺度變項`mood.gain`放到Variables框裡，就會看到報表介面出現這個變項的平均值0.88。雖然我們還不知道這個變項的測量尺度是什麼意義，至少看起來能做些統計工作。
 
 接著可以試試看分組描述統計，請將`therapy`放到"Split by"，並且勾選Std. deviation, Skewness, Kurtosis等項目，看看會不會出現如同 @fig-fig4-14 的結果。
 
