--- a/index.qmd
+++ b/index.qmd
@@ -10,6 +10,8 @@
 
 原書作者Danielle Navarro與David Foxcroft是任教於澳洲阿得雷德大學心理學系，教授統計學的講師，本書內容是根據Danielle Navarro自行開發的講義[Learning Statistics with R](https://learningstatisticswithr.com/)改編，書中有許多例子是採用澳洲政府或民間機構收集的資料。除了解釋統計原理，原作者的大部分用詞接近日常對話，因此除了討論重要觀念的部分，中文翻譯儘可能使用日常用語。如果有部分內容需要進一步解釋或增加說明，可參考譯者自行增加的腳註。本書使用的專用名詞譯名，主要取自國家教育研究院營運的[樂詞網](https://terms.naer.edu.tw/)以及中文維基百科。未提供翻譯的名詞皆保留英文名稱；不同領域有不一樣的翻譯名詞，儘可能優先考慮心理學或統計學的譯名，未來學術界對於專有名詞有統一翻譯，本書將配合更新。本書部分內容使用[OpenAI](https://openai.com/)開發的自然語言聊天機器人[ChatGPD](https://chat.openai.com/)進行初步翻譯，再由譯者編修。有關中文版內容的任何指教，歡迎到本書github儲存庫的[討論區](https://github.com/SCgeeker/lsj-book-zh_tw/issues)提出。
 
+- 使用這本電子書修習任何實體或線上課程的同學，請先觀看[導覽影片](https://youtu.be/yZm1P3r1vrc)，了解如何使用這本書及jamovi開發團隊的資源學習。
+
 <!---This textbook covers the contents of an introductory statistics class, as typically taught to undergraduate psychology, health or social science students. The book covers how to get started in jamovi as well as giving an introduction to data manipulation. From a statistical perspective, the book discusses descriptive statistics and graphing first, followed by chapters on probability theory, sampling and estimation, and null hypothesis testing. After introducing the theory, the book covers the analysis of contingency tables, correlation, *t*-tests, regression, ANOVA and factor analysis. Bayesian statistics are touched on at the end of the book.--->
 
 <!---Citation:--->引用建議(英): Navarro DJ and Foxcroft DR (2022). learning statistics with jamovi: a tutorial for psychology students and other beginners. (Version 0.75). [DOI: 10.24384/hgc3-7p15](https://dx.doi.org/10.24384/hgc3-7p15)
